Fix slider and nav bar and align slider arrows

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,8 +1,12 @@
 $base-color: #ffcc99;
 $primary-color: #cc6633;
 $secondary-color: #330000;
+$hover: rgba($primary-color, 0.5);
+$card: rgba($primary-color, 0.3);
 * {
     box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     margin: 0%;
     padding: 0%;
 }
