--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,3 +13,29 @@ h3 {
     font-family: 'Eczar', serif;
     ;
 }
+
+.btn {
+    border-width: 3px;
+    &-primary {
+        background-color: $primary-color;
+        border-color: $primary-color;
+        font-weight: 500;
+        &:hover {
+            box-sizing: border-box;
+            background-color: $hover;
+            border-color: $primary-color;
+            color: $primary-color;
+            border-width: 3px;
+            font-weight: 500;
+        }
+    }
+}
+
+.text-right {
+    text-align: right;
+}
+
+.card {
+    background-color: $card;
+    border-color: $card;
+}
